--- a/test part.ipynb
+++ b/test part.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,28 +20,16 @@
     "from IPython.display import SVG\n",
     "from keras.utils.vis_utils import model_to_dot\n",
     "from keras.datasets import cifar10\n",
+    "from keras.datasets import cifar100\n",
     "from keras.utils import to_categorical\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.callbacks import ReduceLROnPlateau, EarlyStopping\n",
-    "#from .models import AttentionResNetCifar10"
+    "#from .Model import AttentionResNetCifar10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.datasets import cifar10\n",
-    "\n",
-    "(x_train, y_train), (x_test, y_test) = cifar10.load_data()\n",
-    "y_train = to_categorical(y_train)\n",
-    "y_test = to_categorical(y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,15 +37,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# compute quantities required for featurewise normalization\n",
-    "# (std, mean, and principal components if ZCA whitening is applied)\n",
-    "train_datagen.fit(x_train)\n",
-    "val_datagen.fit(x_train)"
+    "## cifar10 data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train shape: (50000, 32, 32, 3)\n",
+      "50000 train samples\n",
+      "10000 test samples\n",
+      "y_train shape: (50000, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training parameters\n",
+    "batch_size = 32  # orig paper trained all networks with batch_size=128\n",
+    "epochs = 200\n",
+    "data_augmentation = True\n",
+    "num_classes = 10\n",
+    "subtract_pixel_mean = True\n",
+    "# Load the CIFAR10 data.\n",
+    "(x_train, y_train), (x_test, y_test) = cifar10.load_data()\n",
+    "\n",
+    "# Input image dimensions.\n",
+    "input_shape = x_train.shape[1:]\n",
+    "\n",
+    "# Normalize data.\n",
+    "x_train = x_train.astype('float32') / 255\n",
+    "x_test = x_test.astype('float32') / 255\n",
+    "\n",
+    "# If subtract pixel mean is enabled\n",
+    "if subtract_pixel_mean:\n",
+    "    x_train_mean = np.mean(x_train, axis=0)\n",
+    "    x_train -= x_train_mean\n",
+    "    x_test -= x_train_mean\n",
+    "\n",
+    "print('x_train shape:', x_train.shape)\n",
+    "print(x_train.shape[0], 'train samples')\n",
+    "print(x_test.shape[0], 'test samples')\n",
+    "print('y_train shape:', y_train.shape)\n",
+    "\n",
+    "# Convert class vectors to binary class matrices.\n",
+    "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
+    "y_test = keras.utils.to_categorical(y_test, num_classes)"
    ]
   },
   {
@@ -65,20 +97,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "train_datagen = ImageDataGenerator(\n",
-    "    featurewise_center=True,\n",
-    "    featurewise_std_normalization=True,\n",
-    "    rotation_range=20,\n",
-    "    width_shift_range=0.2,\n",
-    "    height_shift_range=0.2,\n",
-    "    zoom_range=0.2,\n",
-    "    horizontal_flip=True)\n",
-    "\n",
-    "val_datagen = ImageDataGenerator(\n",
-    "    featurewise_center=True,\n",
-    "    featurewise_std_normalization=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -86,48 +105,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_model(data,model):\n",
-    "    (x_train, y_train), (x_test, y_test) = data.load_data()\n",
-    "    y_train = to_categorical(y_train)\n",
-    "    y_test = to_categorical(y_test)\n",
-    "    \n",
-    "    train_datagen.fit(x_train)\n",
-    "    val_datagen.fit(x_train)\n",
-    "    \n",
-    "    #model\n",
-    "    \n",
-    "    SVG(model_to_dot(model).create(prog='dot', format='svg'))\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_training(model):\n",
-    "    acc = model['acc']\n",
-    "    val_acc = model['val_acc']\n",
-    "    loss = model['loss']\n",
-    "    val_loss = model['val_loss']\n",
-    "    epochs = range(len(acc))\n",
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer=Adam(learning_rate=lr_schedule(0)),\n",
+    "              metrics=['accuracy'])\n",
+    "model.summary()\n",
+    "print(model_type)\n",
     "\n",
-    "    fig, axes = plt.subplots(1, 2, figsize=(15,5))\n",
-    "    \n",
-    "    axes[0].plot(epochs, acc, 'r-', label='Training Accuracy')\n",
-    "    axes[0].plot(epochs, val_acc, 'b--', label='Validation Accuracy')\n",
-    "    axes[0].set_title('Training and Validation Accuracy')\n",
-    "    axes[0].legend(loc='best')\n",
     "\n",
-    "    axes[1].plot(epochs, loss, 'r-', label='Training Loss')\n",
-    "    axes[1].plot(epochs, val_loss, 'b--', label='Validation Loss')\n",
-    "    axes[1].set_title('Training and Validation Loss')\n",
-    "    axes[1].legend(loc='best')\n",
-    "    \n",
-    "    plt.show()\n",
-    "    \n",
-    "plot_training(model)"
+    "\n",
+    "# Prepare model model saving directory.\n",
+    "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
+    "model_name = 'cifar10_%s_model.{epoch:03d}.h5' % model_type\n",
+    "if not os.path.isdir(save_dir):\n",
+    "    os.makedirs(save_dir)\n",
+    "filepath = os.path.join(save_dir, model_name)\n",
+    "\n",
+    "# Prepare callbacks for model saving and for learning rate adjustment.\n",
+    "checkpoint = ModelCheckpoint(filepath=filepath,\n",
+    "                             monitor='val_acc',\n",
+    "                             verbose=1,\n",
+    "                             save_best_only=True)\n",
+    "\n",
+    "lr_scheduler = LearningRateScheduler(lr_schedule)\n",
+    "\n",
+    "lr_reducer = ReduceLROnPlateau(factor=np.sqrt(0.1),\n",
+    "                               cooldown=0,\n",
+    "                               patience=5,\n",
+    "                               min_lr=0.5e-6)\n",
+    "\n",
+    "callbacks = [checkpoint, lr_reducer, lr_scheduler]\n",
+    "\n",
+    "# Run training, with or without data augmentation.\n",
+    "if not data_augmentation:\n",
+    "    print('Not using data augmentation.')\n",
+    "    model.fit(x_train, y_train,\n",
+    "              batch_size=batch_size,\n",
+    "              epochs=epochs,\n",
+    "              validation_data=(x_test, y_test),\n",
+    "              shuffle=True,\n",
+    "              callbacks=callbacks)\n",
+    "else:\n",
+    "    print('Using real-time data augmentation.')\n",
+    "    # This will do preprocessing and realtime data augmentation:\n",
+    "    datagen = ImageDataGenerator(\n",
+    "        featurewise_center=False,\n",
+    "        samplewise_center=False,\n",
+    "        featurewise_std_normalization=False,\n",
+    "        samplewise_std_normalization=False,\n",
+    "        zca_whitening=False,\n",
+    "        zca_epsilon=1e-06,\n",
+    "        rotation_range=0,\n",
+    "        width_shift_range=0.1,\n",
+    "        height_shift_range=0.1,\n",
+    "        shear_range=0.,\n",
+    "        zoom_range=0.,\n",
+    "        channel_shift_range=0.,\n",
+    "        fill_mode='nearest',\n",
+    "        cval=0.,\n",
+    "        horizontal_flip=True,\n",
+    "        vertical_flip=False,\n",
+    "        rescale=None,\n",
+    "        preprocessing_function=None,\n",
+    "        data_format=None,\n",
+    "        validation_split=0.0)\n",
+    "\n",
+    "    # Compute quantities required for featurewise normalization\n",
+    "    # (std, mean, and principal components if ZCA whitening is applied).\n",
+    "    datagen.fit(x_train)\n",
+    "\n",
+    "    # Fit the model on the batches generated by datagen.flow().\n",
+    "    model.fit_generator(datagen.flow(x_train, y_train, batch_size=batch_size),\n",
+    "                        validation_data=(x_test, y_test),\n",
+    "                        epochs=epochs, verbose=1, workers=4,\n",
+    "                        callbacks=callbacks)\n",
+    "\n",
+    "# Score trained model.\n",
+    "scores = model.evaluate(x_test, y_test, verbose=1)\n",
+    "print('Test loss:', scores[0])\n",
+    "print('Test accuracy:', scores[1])"
    ]
   }
  ],
