--- a/test part.ipynb
+++ b/test part.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import skimage.transform\n",
+    "import time "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,21 +72,21 @@
     }
    ],
    "source": [
-    "x_train = x_train[:2000, :, :, :]\n",
-    "y_train = y_train[:2000]\n",
-    "x_test = x_test[:2000, :, :, :]\n",
-    "y_test = y_test[:2000]\n",
+    "x_train = x_train[:1000, :, :, :]\n",
+    "y_train = y_train[:1000]\n",
+    "x_test = x_test[:200, :, :, :]\n",
+    "y_test = y_test[:200]\n",
     "\n",
     "# Input image dimensions.\n",
     "input_shape = x_train.shape[1:]\n",
     "\n",
     "x_train_224 = []\n",
     "x_test_224 = []\n",
-    "for i in range(2000):\n",
+    "for i in range(1000):\n",
     "  temp = skimage.transform.resize(x_train[i,:,:,:], (224, 224), mode='constant')\n",
     "  x_train_224.append(temp)\n",
     "    \n",
-    "for i in range(2000):\n",
+    "for i in range(200):\n",
     "  temp = skimage.transform.resize(x_test[i,:,:,:], (224, 224), mode='constant')\n",
     "  x_test_224.append(temp)\n",
     "\n",
