--- a/test part.ipynb
+++ b/test part.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "input image shape: (224, 224, 3)\n",
-      "Time taken by above cell is 0.10974392890930176.\n",
+      "Time taken by above cell is 0.12674283186594645.\n",
       "x_train shape: (1000, 224, 224, 3)\n",
       "y_train shape: (1000, 10)\n",
       "x_test shape: (200, 224, 224, 3)\n",
@@ -115,16 +115,12 @@
     "end = time.time()\n",
     "print(\"Time taken by above cell is {}.\".format((end-start)/60))\n",
     "    \n",
-    "# Preprocessing: subtract the mean value across every dimension for training data\n",
-    "mean_image = np.mean(x_train, axis=0)\n",
-    "mean_image_test = np.mean(x_test, axis=0)\n",
+    "# # Preprocessing: subtract the mean value across every dimension for training data\n",
+    "# mean_image = np.mean(x_train, axis=0)\n",
+    "# mean_image_test = np.mean(x_test, axis=0)\n",
     "\n",
-    "x_train = x_train.astype('float32') - mean_image.astype('float32')\n",
-    "x_test = x_test.astype('float32') - mean_image_test\n",
-    "\n",
-    "# Normalize data.\n",
-    "x_train = x_train.astype('float32') / 255\n",
-    "x_test = x_test.astype('float32') / 255\n",
+    "# x_train = x_train.astype('float32') - mean_image.astype('float32')\n",
+    "# x_test = x_test.astype('float32') - mean_image_test\n",
     "\n",
     "print('x_train shape:', x_train.shape)\n",
     "print('y_train shape:', y_train.shape)\n",
@@ -163,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,35 +167,27 @@
     "train_datagen = ImageDataGenerator(\n",
     "    featurewise_center=True,\n",
     "    featurewise_std_normalization=True,\n",
-    "    rotation_range=20,\n",
-    "    width_shift_range=0.2,\n",
-    "    height_shift_range=0.2,\n",
-    "    zoom_range=0.2,\n",
-    "    horizontal_flip=True)\n",
+    "    rescale = 1/255)\n",
+    "#     rotation_range=20,\n",
+    "#     width_shift_range=0.2,\n",
+    "#     height_shift_range=0.2,\n",
+    "#     zoom_range=0.2,\n",
+    "#     horizontal_flip=True)\n",
     "\n",
     "val_datagen = ImageDataGenerator(\n",
     "    featurewise_center=True,\n",
-    "    featurewise_std_normalization=True)\n",
+    "    featurewise_std_normalization=True,\n",
+    "    rescale = 1/255)\n",
     "\n",
     "# compute quantities required for featurewise normalization\n",
     "# (std, mean, and principal components if ZCA whitening is applied)\n",
-    "train_datagen.fit(x_train)\n",
-    "val_datagen.fit(x_train)"
+    "# train_datagen.fit(x_train)\n",
+    "# val_datagen.fit(x_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# build a model\n",
-    "model = AttentionResNet56(shape=(224,224,3), in_channel=64, kernel_size=7, n_classes=10, regularization=0.01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -838,6 +826,9 @@
     }
    ],
    "source": [
+    "# build a model\n",
+    "model = AttentionResNet56(shape=(224,224,3), in_channel=64, kernel_size=7, n_classes=10, regularization=0.01)\n",
+    "\n",
     "# define loss, metrics, optimizer\n",
     "model.compile(Adam(lr=0.0001), loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "model.summary()"
@@ -857,13 +848,19 @@
     }
    ],
    "source": [
-    "batch_size = 64\n",
+    "batch_size = 32\n",
+    "epc = 25\n",
     "\n",
-    "model.fit_generator(train_datagen.flow(x_train, y_train, batch_size=batch_size),\n",
-    "                    steps_per_epoch=len(x_train)//batch_size, epochs=50,\n",
-    "                    validation_data=val_datagen.flow(x_test, y_test, batch_size=batch_size), \n",
-    "                    validation_steps=len(x_test)//batch_size,\n",
-    "                    initial_epoch=0)"
+    "train_generator = train_datagen.flow(x_train, y_train, batch_size=batch_size)\n",
+    "step_size_train = train_generator.n // train_generator.batch_size\n",
+    "test_generator = test_datagen.flow(x_test, y_test, batch_size=batch_size)\n",
+    "step_size_test = test_generator.n // test_generator.batch_size\n",
+    "\n",
+    "model.fit_generator(train_generator,\n",
+    "                    steps_per_epoch = step_size_train,\n",
+    "                    epochs = epc,\n",
+    "                    validation_data = test_generator, \n",
+    "                    validation_steps = step_size_test)"
    ]
   },
   {
