--- a/GR5242-HW5.ipynb
+++ b/GR5242-HW5.ipynb
@@ -215,7 +215,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Embedding(encoder.vocab_size, 64),\n",
+    "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64)),\n",
+    "    tf.keras.layers.Dense(64, activation='relu'),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "model.compile(loss='binary_crossentropy',\n",
+    "              optimizer=tf.keras.optimizers.Adam(1e-4),\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "history = model.fit(train_dataset, epochs=5,\n",
+    "                    validation_data=test_dataset, \n",
+    "                    validation_steps=30)"
+   ]
   }
  ],
  "metadata": {
