--- a/training_92.ipynb
+++ b/training_92.ipynb
@@ -167,6 +167,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Residual AttentionNet 92"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -1450,38 +1457,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Uoz0ZkTfXq9U"
-   },
-   "outputs": [],
-   "source": [
-    "model.save('Model92_paper.h5')  # 0.7418"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "id": "0WNML-cW7j8j",
-    "outputId": "f05bc283-254c-4931-bd58-49e044848e3a"
-   },
-   "outputs": [],
-   "source": [
-    "mv 20191211-005015/ 56_NAL/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1491,18 +1467,294 @@
     "id": "B88gCWdDysFV",
     "outputId": "b49d2731-5826-486e-ade9-cc8a52aa57e9"
    },
+   "source": [
+    "## Training Residual AttentionNet 92 - NAL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/content/gdrive/My Drive/Deep-Learning\n"
+      "Learning rate: 1e-05\n"
      ]
     }
    ],
    "source": [
-    "cd .."
+    "model = AttentionResNet92_NAL(shape=(32,32,3), in_channel=32, kernel_size=5, n_classes=10, dropout=None, regularization=0.00001)\n",
+    "def lr_schedule(epoch):\n",
+    "    lr = 1e-5\n",
+    "    if epoch > 90:\n",
+    "        lr *= 1e-30\n",
+    "    elif epoch > 80:\n",
+    "        lr *= 1e-25\n",
+    "    elif epoch > 70:\n",
+    "        lr *= 1e-19\n",
+    "    elif epoch > 60:\n",
+    "        lr *= 1e-14\n",
+    "    elif epoch > 50:\n",
+    "        lr *= 1e-10\n",
+    "    elif epoch >40:\n",
+    "        lr *= 1e-7\n",
+    "    elif epoch > 30:\n",
+    "        lr *= 1e-4\n",
+    "    elif epoch > 20:\n",
+    "        lr *= 1e-2\n",
+    "    elif epoch >10:\n",
+    "        lr *= 1e-1\n",
+    "    print('Learning rate:', lr)\n",
+    "    return lr\n",
+    "\n",
+    "lr_scheduler = LearningRateScheduler(lr_schedule)\n",
+    "# define loss, metrics, optimizer\n",
+    "optimizer = Adam(lr = lr_schedule(0) )\n",
+    "#optimizer = SGD(lr = lr_schedule(0), momentum=0.9, nesterov = True)\n",
+    "model.compile(optimizer, loss='categorical_crossentropy', metrics=['accuracy'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning rate: 1e-05\n",
+      "Epoch 1/100\n",
+      "351/351 [==============================] - 275s 783ms/step - loss: 2.2758 - acc: 0.1572 - val_loss: 2.3754 - val_acc: 0.1446\n",
+      "Learning rate: 1e-05\n",
+      "Epoch 2/100\n",
+      "351/351 [==============================] - 211s 600ms/step - loss: 2.1031 - acc: 0.2203 - val_loss: 2.1311 - val_acc: 0.2378\n",
+      "Learning rate: 1e-05\n",
+      "Epoch 3/100\n",
+      "351/351 [==============================] - 213s 608ms/step - loss: 2.0244 - acc: 0.2472 - val_loss: 2.0767 - val_acc: 0.2604\n",
+      "Learning rate: 1e-05\n",
+      "Epoch 4/100\n",
+      "351/351 [==============================] - 216s 614ms/step - loss: 1.9692 - acc: 0.2716 - val_loss: 2.0920 - val_acc: 0.2658\n",
+      "Learning rate: 1e-05\n",
+      "Epoch 5/100\n",
+      "351/351 [==============================] - 216s 614ms/step - loss: 1.9281 - acc: 0.2881 - val_loss: 1.9620 - val_acc: 0.2955\n",
+      "Learning rate: 1e-05\n",
+      "Epoch 6/100\n",
+      "351/351 [==============================] - 214s 610ms/step - loss: 1.8873 - acc: 0.3038 - val_loss: 1.9176 - val_acc: 0.3215\n",
+      "Learning rate: 1e-05\n",
+      "Epoch 7/100\n",
+      "351/351 [==============================] - 207s 590ms/step - loss: 1.8593 - acc: 0.3157 - val_loss: 1.8609 - val_acc: 0.3375\n",
+      "Learning rate: 1e-05\n",
+      "Epoch 8/100\n",
+      "351/351 [==============================] - 205s 585ms/step - loss: 1.8300 - acc: 0.3253 - val_loss: 1.8609 - val_acc: 0.3247\n",
+      "Learning rate: 1e-05\n",
+      "Epoch 9/100\n",
+      "351/351 [==============================] - 208s 593ms/step - loss: 1.8033 - acc: 0.3369 - val_loss: 1.8000 - val_acc: 0.3494\n",
+      "Learning rate: 1e-05\n",
+      "Epoch 10/100\n",
+      "351/351 [==============================] - 206s 586ms/step - loss: 1.7821 - acc: 0.3438 - val_loss: 1.7940 - val_acc: 0.3594\n",
+      "Learning rate: 1e-05\n",
+      "Epoch 11/100\n",
+      "351/351 [==============================] - 205s 583ms/step - loss: 1.7557 - acc: 0.3584 - val_loss: 1.7523 - val_acc: 0.3654\n",
+      "Learning rate: 1.0000000000000002e-06\n",
+      "Epoch 12/100\n",
+      "351/351 [==============================] - 205s 584ms/step - loss: 1.7249 - acc: 0.3678 - val_loss: 1.6942 - val_acc: 0.3850\n",
+      "Learning rate: 1.0000000000000002e-06\n",
+      "Epoch 13/100\n",
+      "351/351 [==============================] - 204s 582ms/step - loss: 1.7188 - acc: 0.3735 - val_loss: 1.6793 - val_acc: 0.3876\n",
+      "Learning rate: 1.0000000000000002e-06\n",
+      "Epoch 14/100\n",
+      "351/351 [==============================] - 205s 584ms/step - loss: 1.7166 - acc: 0.3726 - val_loss: 1.6786 - val_acc: 0.3858\n",
+      "Learning rate: 1.0000000000000002e-06\n",
+      "Epoch 15/100\n",
+      "351/351 [==============================] - 207s 591ms/step - loss: 1.7116 - acc: 0.3743 - val_loss: 1.6713 - val_acc: 0.3926\n",
+      "Learning rate: 1.0000000000000002e-06\n",
+      "Epoch 16/100\n",
+      "351/351 [==============================] - 208s 591ms/step - loss: 1.7097 - acc: 0.3769 - val_loss: 1.6697 - val_acc: 0.3908\n",
+      "Learning rate: 1.0000000000000002e-06\n",
+      "Epoch 17/100\n",
+      "351/351 [==============================] - 208s 591ms/step - loss: 1.7017 - acc: 0.3771 - val_loss: 1.6670 - val_acc: 0.3956\n",
+      "Learning rate: 1.0000000000000002e-06\n",
+      "Epoch 18/100\n",
+      "351/351 [==============================] - 205s 584ms/step - loss: 1.7058 - acc: 0.3787 - val_loss: 1.6604 - val_acc: 0.3914\n",
+      "Learning rate: 1.0000000000000002e-06\n",
+      "Epoch 19/100\n",
+      "351/351 [==============================] - 204s 583ms/step - loss: 1.6982 - acc: 0.3811 - val_loss: 1.6607 - val_acc: 0.4032\n",
+      "Learning rate: 1.0000000000000002e-06\n",
+      "Epoch 20/100\n",
+      "351/351 [==============================] - 205s 585ms/step - loss: 1.6946 - acc: 0.3798 - val_loss: 1.6608 - val_acc: 0.3988\n",
+      "Learning rate: 1.0000000000000002e-06\n",
+      "Epoch 21/100\n",
+      "351/351 [==============================] - 204s 580ms/step - loss: 1.6925 - acc: 0.3837 - val_loss: 1.6643 - val_acc: 0.3984\n",
+      "Learning rate: 1.0000000000000001e-07\n",
+      "Epoch 22/100\n",
+      "351/351 [==============================] - 203s 580ms/step - loss: 1.6895 - acc: 0.3829 - val_loss: 1.6474 - val_acc: 0.4036\n",
+      "Learning rate: 1.0000000000000001e-07\n",
+      "Epoch 23/100\n",
+      "351/351 [==============================] - 204s 580ms/step - loss: 1.6827 - acc: 0.3876 - val_loss: 1.6493 - val_acc: 0.4012\n",
+      "Learning rate: 1.0000000000000001e-07\n",
+      "Epoch 24/100\n",
+      "351/351 [==============================] - 204s 582ms/step - loss: 1.6819 - acc: 0.3860 - val_loss: 1.6420 - val_acc: 0.4073\n",
+      "Learning rate: 1.0000000000000001e-07\n",
+      "Epoch 25/100\n",
+      "351/351 [==============================] - 203s 579ms/step - loss: 1.6836 - acc: 0.3835 - val_loss: 1.6431 - val_acc: 0.4014\n",
+      "Learning rate: 1.0000000000000001e-07\n",
+      "Epoch 26/100\n",
+      "351/351 [==============================] - 204s 582ms/step - loss: 1.6847 - acc: 0.3843 - val_loss: 1.6458 - val_acc: 0.4048\n",
+      "Learning rate: 1.0000000000000001e-07\n",
+      "Epoch 27/100\n",
+      "351/351 [==============================] - 205s 585ms/step - loss: 1.6867 - acc: 0.3861 - val_loss: 1.6427 - val_acc: 0.4028\n",
+      "Learning rate: 1.0000000000000001e-07\n",
+      "Epoch 28/100\n",
+      "351/351 [==============================] - 205s 584ms/step - loss: 1.6858 - acc: 0.3853 - val_loss: 1.6440 - val_acc: 0.4034\n",
+      "Learning rate: 1.0000000000000001e-07\n",
+      "Epoch 29/100\n",
+      "350/351 [============================>.] - ETA: 0s - loss: 1.6874 - acc: 0.3861\n",
+      "Epoch 00029: ReduceLROnPlateau reducing learning rate to 1.0000000116860975e-08.\n",
+      "351/351 [==============================] - 203s 580ms/step - loss: 1.6873 - acc: 0.3860 - val_loss: 1.6435 - val_acc: 0.4026\n",
+      "Learning rate: 1.0000000000000001e-07\n",
+      "Epoch 30/100\n",
+      "351/351 [==============================] - 204s 582ms/step - loss: 1.6847 - acc: 0.3857 - val_loss: 1.6480 - val_acc: 0.4004\n",
+      "Learning rate: 1.0000000000000001e-07\n",
+      "Epoch 31/100\n",
+      "351/351 [==============================] - 204s 580ms/step - loss: 1.6837 - acc: 0.3849 - val_loss: 1.6425 - val_acc: 0.4044\n",
+      "Learning rate: 1e-09\n",
+      "Epoch 32/100\n",
+      "351/351 [==============================] - 204s 580ms/step - loss: 1.6812 - acc: 0.3872 - val_loss: 1.6414 - val_acc: 0.4077\n",
+      "Learning rate: 1e-09\n",
+      "Epoch 33/100\n",
+      "351/351 [==============================] - 204s 580ms/step - loss: 1.6855 - acc: 0.3876 - val_loss: 1.6401 - val_acc: 0.4038\n",
+      "Learning rate: 1e-09\n",
+      "Epoch 34/100\n",
+      "351/351 [==============================] - 203s 579ms/step - loss: 1.6811 - acc: 0.3874 - val_loss: 1.6422 - val_acc: 0.4026\n",
+      "Learning rate: 1e-09\n",
+      "Epoch 35/100\n",
+      "351/351 [==============================] - 203s 578ms/step - loss: 1.6868 - acc: 0.3847 - val_loss: 1.6408 - val_acc: 0.4079\n",
+      "Learning rate: 1e-09\n",
+      "Epoch 36/100\n",
+      "351/351 [==============================] - 203s 578ms/step - loss: 1.6835 - acc: 0.3855 - val_loss: 1.6422 - val_acc: 0.4077\n",
+      "Learning rate: 1e-09\n",
+      "Epoch 37/100\n",
+      "351/351 [==============================] - 203s 578ms/step - loss: 1.6830 - acc: 0.3889 - val_loss: 1.6436 - val_acc: 0.4048\n",
+      "Learning rate: 1e-09\n",
+      "Epoch 38/100\n",
+      "351/351 [==============================] - 205s 584ms/step - loss: 1.6860 - acc: 0.3875 - val_loss: 1.6413 - val_acc: 0.4038\n",
+      "Learning rate: 1e-09\n",
+      "Epoch 39/100\n",
+      "351/351 [==============================] - 204s 583ms/step - loss: 1.6791 - acc: 0.3892 - val_loss: 1.6423 - val_acc: 0.4044\n",
+      "Learning rate: 1e-09\n",
+      "Epoch 40/100\n",
+      "350/351 [============================>.] - ETA: 0s - loss: 1.6812 - acc: 0.3868\n",
+      "Epoch 00040: ReduceLROnPlateau reducing learning rate to 9.999999717180686e-11.\n",
+      "351/351 [==============================] - 205s 583ms/step - loss: 1.6812 - acc: 0.3867 - val_loss: 1.6436 - val_acc: 0.4038\n",
+      "Learning rate: 1e-09\n",
+      "Epoch 41/100\n",
+      "351/351 [==============================] - 205s 584ms/step - loss: 1.6832 - acc: 0.3832 - val_loss: 1.6428 - val_acc: 0.4095\n",
+      "Learning rate: 1e-12\n",
+      "Epoch 42/100\n",
+      "351/351 [==============================] - 205s 585ms/step - loss: 1.6831 - acc: 0.3849 - val_loss: 1.6418 - val_acc: 0.4075\n",
+      "Learning rate: 1e-12\n",
+      "Epoch 43/100\n",
+      "351/351 [==============================] - 205s 585ms/step - loss: 1.6838 - acc: 0.3850 - val_loss: 1.6389 - val_acc: 0.4062\n",
+      "Learning rate: 1e-12\n",
+      "Epoch 44/100\n",
+      "351/351 [==============================] - 205s 583ms/step - loss: 1.6795 - acc: 0.3885 - val_loss: 1.6458 - val_acc: 0.4054\n",
+      "Learning rate: 1e-12\n",
+      "Epoch 45/100\n",
+      "351/351 [==============================] - 206s 586ms/step - loss: 1.6825 - acc: 0.3879 - val_loss: 1.6427 - val_acc: 0.4058\n",
+      "Learning rate: 1e-12\n",
+      "Epoch 46/100\n",
+      "350/351 [============================>.] - ETA: 0s - loss: 1.6793 - acc: 0.3888\n",
+      "Epoch 00046: ReduceLROnPlateau reducing learning rate to 9.999999960041973e-14.\n",
+      "351/351 [==============================] - 207s 589ms/step - loss: 1.6794 - acc: 0.3887 - val_loss: 1.6430 - val_acc: 0.4060\n",
+      "Learning rate: 1e-12\n",
+      "Epoch 47/100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "351/351 [==============================] - 205s 583ms/step - loss: 1.6856 - acc: 0.3857 - val_loss: 1.6401 - val_acc: 0.4083\n",
+      "Learning rate: 1e-12\n",
+      "Epoch 48/100\n",
+      "351/351 [==============================] - 204s 581ms/step - loss: 1.6812 - acc: 0.3875 - val_loss: 1.6386 - val_acc: 0.4040\n",
+      "Learning rate: 1e-12\n",
+      "Epoch 49/100\n",
+      "351/351 [==============================] - 204s 581ms/step - loss: 1.6798 - acc: 0.3879 - val_loss: 1.6437 - val_acc: 0.4046\n",
+      "Learning rate: 1e-12\n",
+      "Epoch 50/100\n",
+      "351/351 [==============================] - 205s 583ms/step - loss: 1.6840 - acc: 0.3857 - val_loss: 1.6444 - val_acc: 0.4010\n",
+      "Learning rate: 1e-12\n",
+      "Epoch 51/100\n",
+      "350/351 [============================>.] - ETA: 0s - loss: 1.6838 - acc: 0.3859\n",
+      "Epoch 00051: ReduceLROnPlateau reducing learning rate to 9.999999960041973e-14.\n",
+      "351/351 [==============================] - 204s 581ms/step - loss: 1.6841 - acc: 0.3858 - val_loss: 1.6418 - val_acc: 0.4048\n",
+      "Learning rate: 1e-15\n",
+      "Epoch 52/100\n",
+      "351/351 [==============================] - 204s 582ms/step - loss: 1.6792 - acc: 0.3856 - val_loss: 1.6441 - val_acc: 0.4038\n",
+      "Learning rate: 1e-15\n",
+      "Epoch 53/100\n",
+      "351/351 [==============================] - 204s 581ms/step - loss: 1.6818 - acc: 0.3884 - val_loss: 1.6417 - val_acc: 0.4062\n",
+      "Learning rate: 1e-15\n",
+      "Epoch 54/100\n",
+      "351/351 [==============================] - 204s 582ms/step - loss: 1.6798 - acc: 0.3866 - val_loss: 1.6414 - val_acc: 0.4038\n",
+      "Learning rate: 1e-15\n",
+      "Epoch 55/100\n",
+      "351/351 [==============================] - 204s 581ms/step - loss: 1.6804 - acc: 0.3861 - val_loss: 1.6406 - val_acc: 0.4087\n",
+      "Learning rate: 1e-15\n",
+      "Epoch 56/100\n",
+      "350/351 [============================>.] - ETA: 0s - loss: 1.6784 - acc: 0.3889\n",
+      "Epoch 00056: ReduceLROnPlateau reducing learning rate to 1.0000000036274938e-16.\n",
+      "351/351 [==============================] - 204s 581ms/step - loss: 1.6786 - acc: 0.3889 - val_loss: 1.6453 - val_acc: 0.3996\n",
+      "Epoch 00056: early stopping\n",
+      "Time taken by above cell is 193.16622990369797.\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 128\n",
+    "epc = 100\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "# training\n",
+    "train_generator = train_datagen.flow(x_train, y_train, batch_size=batch_size)\n",
+    "step_size_train = train_generator.n // train_generator.batch_size\n",
+    "\n",
+    "# validation\n",
+    "val_generator = val_datagen.flow(x_val, y_val, batch_size=batch_size)\n",
+    "step_size_val = val_generator.n // val_generator.batch_size\n",
+    "\n",
+    "# test\n",
+    "test_generator = test_datagen.flow(x_test, y_test, batch_size=batch_size)\n",
+    "step_size_test = test_generator.n // test_generator.batch_size\n",
+    "\n",
+    "# usefull callbacks\n",
+    "log_dir=\"Logs/92full-NAL\"\n",
+    "tensorboard_callback = TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
+    "lr_reducer = ReduceLROnPlateau(monitor='val_acc', factor=0.1, patience=5, verbose=1)\n",
+    "early_stopper = EarlyStopping(monitor='val_acc', patience=15, verbose=1)\n",
+    "\n",
+    "model.fit_generator(train_generator,\n",
+    "                    steps_per_epoch = step_size_train,\n",
+    "                    epochs = epc,\n",
+    "                    validation_data = val_generator,\n",
+    "                    validation_steps = step_size_val,\n",
+    "                    callbacks=[tensorboard_callback, lr_reducer, lr_scheduler, early_stopper])\n",
+    "\n",
+    "end = time.time()\n",
+    "print(\"Time taken by above cell is {}.\".format((end-start)/60))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
